--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -6,6 +6,12 @@
 	padding-right: 3px;
 }
 
+.input-list .col-8 span{
+	display: none;
+	font-size: 80%;
+	margin-left: 5px;
+}
+
 .input-list .col-4{
 	padding-left: 3px;
 }
@@ -13,11 +19,11 @@
 button.btn{
 	cursor: pointer;
 	width: 100%;
-	background-color: #7295fa;
+	background-color: #6382db;
 	color: #fff;
 }
 
 button.btn:hover{
-	background-color: #6382db; 
+	background-color: #4663b8; 
 	color: #fff;
 }
