--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -5,8 +5,9 @@ ul{
 ul li{
 	list-style-type: none;
 	background-color: #efefef;
+	color: rgb(90, 90, 90);
 	padding: 10px;
-	text-align: center;
+	text-align: left;
 	margin: 5px 0;
 	border-radius: 5px;
 	letter-spacing: 1px;
@@ -14,18 +15,22 @@ ul li{
 	text-transform: capitalize;
 }
 
+ul li span{
+	margin-left: 10px;
+}
+
 ul li .remove-icon{
 	float: right;
 	font-size: 15px;
 	cursor: pointer;
 	padding: 5px;
-	color: #7295fa;
-}
-
-ul li .remove-icon:hover{
 	color: #6382db;
 }
 
+ul li .remove-icon:hover{
+	color: #4663b8;
+}
+
 p.empty-list {
-	font-size: 20px;
+	font-size: 28px;
 }
